[build-system]
requires = [
    "cmake_build_extension",
]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
  "third_party",
  "src/turbomind",
]

[tool.ruff.lint]
select = [
  "E", "F", "I", "W",
  "UP",
]
ignore = [
  "E231", "E741"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
    "multi_gpu: marks tests that require multiple GPUs",
    "vlm: marks tests for vision-language models",
    "quantization: marks tests for quantization",
]

[tool.coverage.run]
source = ["lmdeploy"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/third_party/*",
    "*/src/turbomind/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Minimum coverage thresholds (adjust based on project goals)
[tool.coverage.html]
directory = "coverage_html_report"

[tool.coverage.xml]
output = "coverage.xml"
